# tungstenite-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
autobahn/: client-results.json  expected-results.json  fuzzingclient.json  server-results.json
autobahn/client/: index.html  index.json  tungstenite_case_10_1_1.html  tungstenite_case_10_1_1.json  tungstenite_case_12_1_1.html  tungstenite_case_12_1_1.json  tungstenite_case_12_1_10.html  tungstenite_case_12_1_10.json  tungstenite_case_12_1_11.html  tungstenite_case_12_1_11.json  tungstenite_case_12_1_12.html  tungstenite_case_12_1_12.json  tungstenite_case_12_1_13.html  tungstenite_case_12_1_13.json  tungstenite_case_12_1_14.html  tungstenite_case_12_1_14.json  tungstenite_case_12_1_15.html  tungstenite_case_12_1_15.json  tungstenite_case_12_1_16.html  tungstenite_case_12_1_16.json  tungstenite_case_12_1_17.html  tungstenite_case_12_1_17.json  tungstenite_case_12_1_18.html  tungstenite_case_12_1_18.json  tungstenite_case_12_1_2.html  tungstenite_case_12_1_2.json  tungstenite_case_12_1_3.html  tungstenite_case_12_1_3.json  tungstenite_case_12_1_4.html  tungstenite_case_12_1_4.json  tungstenite_case_12_1_5.html  tungstenite_case_12_1_5.json  tungstenite_case_12_1_6.html  tungstenite_case_12_1_6.json  tungstenite_case_12_1_7.html  tungstenite_case_12_1_7.json  tungstenite_case_12_1_8.html  tungstenite_case_12_1_8.json  tungstenite_case_12_1_9.html  tungstenite_case_12_1_9.json  (+998 more)
benches/: buffer.rs  e2e.rs  read.rs  read_latency.rs  write.rs
examples/: autobahn-client.rs  autobahn-server.rs  callback-error.rs  client.rs  proxy-client.rs  server.rs  srv_accept_unmasked_frames.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_frame.rs  parse_frame_header.rs  read_message_client.rs  read_message_server.rs
scripts/: autobahn-client.sh  autobahn-server.sh
scripts/proxy-test/: start.sh  stop.sh
src/: buffer.rs  client.rs  error.rs  input_buffer.rs  lib.rs  proxy.rs  server.rs  stream.rs  tls.rs  utf8.rs  util.rs
src/error/: capacity_error.rs  protocol_error.rs  tls_error.rs  url_error.rs
src/ext/: deflate.rs  mod.rs  uncompressed.rs
src/extensions/: compression.rs  deflate.rs  mod.rs  uncompressed.rs
src/extensions/compression/: deflate.rs  mod.rs  uncompressed.rs
src/extensions/compression/tests/: deflate.rs  mod.rs
src/handshake/: client.rs  headers.rs  machine.rs  mod.rs  server.rs  tls.rs
src/handshake/headers/: mod.rs  sec_websocket_extensions.rs  utils.rs
src/protocol/: data.rs  message.rs  mod.rs
src/protocol/frame/: coding.rs  frame.rs  init_aware_buf.rs  mask.rs  mod.rs  payload.rs  utf8.rs
tests/: auto_pong_flush.rs  client_headers.rs  connection_reset.rs  handshake.rs  no_send_after_close.rs  proxy_integration.rs  receive_after_init_close.rs  url_feature.rs  write.rs  wss_fails_when_no_tls.rs
