[package]
name = "tungstenite"
description = "Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming"]
keywords = ["websocket", "io", "web"]
authors = ["Alexey Galakhov", "Daniel Abramov"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/snapview/tungstenite-rs"
documentation = "https://docs.rs/tungstenite/0.17.3"
repository = "https://github.com/snapview/tungstenite-rs"
version = "0.17.3"
edition = "2018"
rust-version = "1.51"
include = ["benches/**/*", "src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
native-tls = ["native-tls-crate"]
native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]
rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
__rustls-tls = ["rustls", "webpki"]

[dependencies]
base64 = "0.13.0"
byteorder = "1.3.2"
bytes = "1.0"
http = "0.2"
httparse = "1.3.4"
log = "0.4.8"
rand = "0.8.0"
sha-1 = "0.10"
thiserror = "1.0.23"
url = "2.1.0"
utf-8 = "0.7.5"

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.3"

[dependencies.rustls]
optional = true
version = "0.20.0"

[dependencies.rustls-native-certs]
optional = true
version = "0.6.0"

[dependencies.webpki]
optional = true
version = "0.22"

[dependencies.webpki-roots]
optional = true
version = "0.22"

[dev-dependencies]
criterion = "0.3.4"
env_logger = "0.9.0"
input_buffer = "0.5.0"
net2 = "0.2.37"
rand = "0.8.4"

[[bench]]
name = "buffer"
harness = false
